<resources>
  <string name="app_name">GitSurf</string>

  <string name="user_name">User Name</string>
  <string name="password">Password</string>
  <string name="loading">Loading</string>
  <string name="progressRight">Progress Right</string>
  <string name="login">Login</string>

  <string name="msg_no_internet">No internet connection</string>
  <string name="msg_username_empty">Please enter a valid username</string>
  <string name="msg_password_empty">Please enter a valid password</string>
  <string name="msg_unknown_error">An unknown error has occurred</string>
  <string name="profile">Profile</string>
  <string name="repositories">Repositories</string>
  <string name="code">Code</string>
  <string name="feeds">Feeds</string>
  <string name="con_desc_avatar">Avatar</string>
  <string name="con_desc_feed_icon">Feed icon</string>
  <string name="con_desc_repo_icon">Repo icon</string>
  <string name="starred">Starred</string>
  <string name="bookmarks">Bookmarks</string>
  <string name="lost_internet_message">You have lost internet connection</string>

  <string name="transition_avatar">avatar %s</string>
  <string name="transition_name">name %s</string>
  <string name="desc_toolbar_icon">Toolbar Icon</string>
</resources>
