<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/feedFragment">

  <fragment
      android:id="@+id/feedFragment"
      android:name="com.gitsurfer.gitsurf.ui.main.feed.FeedFragment"
      android:label="@string/feeds"
      tools:layout="@layout/fragment_feed">

    <action
        android:id="@+id/open_repo_from_feed"
        app:destination="@+id/repoFragment" />

  </fragment>

  <fragment
      android:id="@+id/bookmarksFragment"
      android:name="com.gitsurfer.gitsurf.ui.main.bookmarks.BookmarksFragment"
      android:label="@string/bookmarks"
      tools:layout="@layout/fragment_bookmarks">
    <action
        android:id="@+id/action_bookmarksFragment_to_repoFragment"
        app:destination="@id/repoFragment" />
  </fragment>

  <fragment
      android:id="@+id/repoFragment"
      android:name="com.gitsurfer.gitsurf.ui.main.repo.RepoFragment"
      android:label="@string/repositories"
      tools:layout="@layout/fragment_repo">

    <argument
        android:name="repoOwner"
        app:argType="string" />
    <argument
        android:name="repoName"
        app:argType="string" />

    <action
        android:id="@+id/open_code_from_repo"
        app:destination="@+id/codeFragment" />
  </fragment>

  <fragment
      android:id="@+id/codeFragment"
      android:name="com.gitsurfer.gitsurf.ui.main.repo.files.code.CodeFragment"
      android:label="@string/code"
      tools:layout="@layout/fragment_code">

    <argument
        android:name="fileName"
        app:argType="string" />

    <argument
        android:name="fileUrl"
        app:argType="string" />
  </fragment>
</navigation>