<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <data>

    <variable
        name="viewModel"
        type="com.gitsurfer.gitsurf.ui.login.LoginViewModel"
        />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="16dp"
      tools:context=".ui.login.LoginActivity"
      >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/user_name_et"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:imeOptions="actionNext"
          android:inputType="textPersonName"
          android:maxLines="1"
          android:text="@={viewModel.username}"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_layout"
        >

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/password_et"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:imeOptions="actionNext"
          android:inputType="textPassword"
          android:maxLines="1"
          android:text="@={viewModel.password}"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:padding="16dp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layout"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>